--- a/about.html
+++ b/about.html
@@ -1,17 +1,18 @@
 <html lang="ru">
 <head>
-<title>Авторы</title>
-<p align=center><font face="times new roman" size=+4><b><u>Электронный тренажер</b></u></font></p>
-<p align=center><font face="calibri" color=gray><i>Автооры</i></font></p>
+<meta charset="utf-8">
+<title>РђРІС‚РѕСЂС‹</title>
+<p align=center><font face="times new roman" size=+4><b><u>Р­Р»РµРєС‚СЂРѕРЅРЅС‹Р№ С‚СЂРµРЅР°Р¶РµСЂ</b></u></font></p>
+<p align=center><font face="calibri" color=gray><i>РђРІС‚РѕРѕСЂС‹</i></font></p>
 <body background="back.jpg">
-<p align=left><font face="Arial"><b>Создатели проекта:</b></font></p>
+<p align=left><font face="Arial"><b>РЎРѕР·РґР°С‚РµР»Рё РїСЂРѕРµРєС‚Р°:</b></font></p>
 <ul>
-<li>Шардин Матвей</li>
-<li>Владимир Важенов</li>
-<li>Дмитрий Агеев</li>
-<li>Дмитрий Ефремов</li>
+<li>РЁР°СЂРґРёРЅ РњР°С‚РІРµР№</li>
+<li>Р’Р»Р°РґРёРјРёСЂ Р’Р°Р¶РµРЅРѕРІ</li>
+<li>Р”РјРёС‚СЂРёР№ РђРіРµРµРІ</li>
+<li>Р”РјРёС‚СЂРёР№ Р•С„СЂРµРјРѕРІ</li>
 </ul>
 
-<p align=right><font face="Arial"><a href="index.html"><b>На главную</b></a></font></p>
+<p align=right><font face="Arial"><a href="index.html"><b>РќР° РіР»Р°РІРЅСѓСЋ</b></a></font></p>
 </body>
 </html>
