--- a/download.html
+++ b/download.html
@@ -1,14 +1,15 @@
 <html lang="ru">
 <head>
-<title>Скачать</title>
-<p align=center><font face="times new roman" size=+4><b><u>Электронный тренажер</b></u></font></p>
-<p align=center><font face="calibri" color=gray><i>Скачать</i></font></p>
+<meta charset="utf-8">
+<title>РЎРєР°С‡Р°С‚СЊ</title>
+<p align=center><font face="times new roman" size=+4><b><u>Р­Р»РµРєС‚СЂРѕРЅРЅС‹Р№ С‚СЂРµРЅР°Р¶РµСЂ</b></u></font></p>
+<p align=center><font face="calibri" color=gray><i>РЎРєР°С‡Р°С‚СЊ</i></font></p>
 <body background="back.jpg">
-<p align=left><font face="Arial"><b>Ссылки</b></font></p>
+<p align=left><font face="Arial"><b>РЎСЃС‹Р»РєРё</b></font></p>
 <ul>
-<li><a href="https://yadi.sk/d/jySF-fNy3RxXYM">Готовый образец электронного тренажера</a></li>
-<li><a href="https://yadi.sk/d/zCagEGuE3RxXY5">Пустой шаблон электронного тренажера</a></li>
+<li><a href="https://yadi.sk/d/jySF-fNy3RxXYM">Р“РѕС‚РѕРІС‹Р№ РѕР±СЂР°Р·РµС† СЌР»РµРєС‚СЂРѕРЅРЅРѕРіРѕ С‚СЂРµРЅР°Р¶РµСЂР°</a></li>
+<li><a href="https://yadi.sk/d/zCagEGuE3RxXY5">РџСѓСЃС‚РѕР№ С€Р°Р±Р»РѕРЅ СЌР»РµРєС‚СЂРѕРЅРЅРѕРіРѕ С‚СЂРµРЅР°Р¶РµСЂР°</a></li>
 </ul>
-<p align=right><font face="Arial"><a href="index.html"><b>На главную</b></a></font></p>
+<p align=right><font face="Arial"><a href="index.html"><b>РќР° РіР»Р°РІРЅСѓСЋ</b></a></font></p>
 </body>
 </html>
