--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html lang="ru">
 <head>
+<meta charset="utf-8">
 <title>Главная страница</title>
-<p align=center><font face="times new roman" size=+4><b><u>Ýëåêòðîííûé òðåíàæåð</b></u></font></p>
-<p align=center><font face="calibri" color=gray><i>Ãëàâíàÿ ñòðàíèöà</i></font></p>
+<p align=center><font face="times new roman" size=+4><b><u>Электронный тренажер</b></u></font></p>
+<p align=center><font face="calibri" color=gray><i>Главная страница</i></font></p>
 <body background="back.jpg">
-<p align=left><font face="Arial"><b>Íàâèãàöèÿ</b></font></p>
+<p align=left><font face="Arial"><b>Навигация</b></font></p>
 <ul>
-<li><a href="download.html">Ëèñò ññûëîê íà ñêà÷êó</a></li>
-<li><a href="inst.html">Èíñòðóêöèè</a></li>
-<li><a href="about.html">Àâòîðû</a></li>
+<li><a href="download.html">Лист ссылок на скачку</a></li>
+<li><a href="inst.html">Инструкции</a></li>
+<li><a href="about.html">Авторы</a></li>
 </ul>
 </body>
 </html>
