--- a/inst.html
+++ b/inst.html
@@ -1,31 +1,33 @@
 <html lang="ru">
 <head>
-<title>Инструкция</title>
-<p align=center><font face="times new roman" size=+4><b><u>Электронный тренажер</b></u></font></p>
-<p align=center><font face="calibri" color=gray><i>Инструкция</i></font></p>
+<meta charset="utf-8">
+<title>РРЅСЃС‚СЂСѓРєС†РёСЏ</title>
+<p align=center><font face="times new roman" size=+4><b><u>Р­Р»РµРєС‚СЂРѕРЅРЅС‹Р№ С‚СЂРµРЅР°Р¶РµСЂ</b></u></font></p>
+<p align=center><font face="calibri" color=gray><i>РРЅСЃС‚СЂСѓРєС†РёСЏ</i></font></p>
 <body background="back.jpg">
 
-<p align=left><font face="Arial"><b>Как решить тест в электронном тренажере?</b></font></p>
+<p align=left><font face="Arial"><b>РљР°Рє СЂРµС€РёС‚СЊ С‚РµСЃС‚ РІ СЌР»РµРєС‚СЂРѕРЅРЅРѕРј С‚СЂРµРЅР°Р¶РµСЂРµ?</b></font></p>
 <ol type="1" start="1">
-<li>Скачать тренажер в разделе <a href="download.html">лист ссылок на скачку</a>
-<li>Открыть скачанный файл в программе Excel
-<li>Решить задание, написанное в первом столбце
-<li>Вписать ответ к заданию в соответствующую строку
-<li>Нажать "Enter"
-<li>Проверить свою оценку, которая автоматически появится после решения заданий
+<li>РЎРєР°С‡Р°С‚СЊ С‚СЂРµРЅР°Р¶РµСЂ РІ СЂР°Р·РґРµР»Рµ <a href="download.html">Р»РёСЃС‚ СЃСЃС‹Р»РѕРє РЅР° СЃРєР°С‡РєСѓ</a>
+<li>РћС‚РєСЂС‹С‚СЊ СЃРєР°С‡Р°РЅРЅС‹Р№ С„Р°Р№Р» РІ РїСЂРѕРіСЂР°РјРјРµ Excel
+<li>Р РµС€РёС‚СЊ Р·Р°РґР°РЅРёРµ, РЅР°РїРёСЃР°РЅРЅРѕРµ РІ РїРµСЂРІРѕРј СЃС‚РѕР»Р±С†Рµ
+<li>Р’РїРёСЃР°С‚СЊ РѕС‚РІРµС‚ Рє Р·Р°РґР°РЅРёСЋ РІ СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰СѓСЋ СЃС‚СЂРѕРєСѓ
+<li>РќР°Р¶Р°С‚СЊ "Enter"
+<li>РџСЂРѕРІРµСЂРёС‚СЊ СЃРІРѕСЋ РѕС†РµРЅРєСѓ, РєРѕС‚РѕСЂР°СЏ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРё РїРѕСЏРІРёС‚СЃСЏ РїРѕСЃР»Рµ СЂРµС€РµРЅРёСЏ Р·Р°РґР°РЅРёР№
 </ol>
 
-<p align=left><font face="Arial"><b>Как создать свой тест на основе электронного тренажера?</b></font></p>
+<p align=left><font face="Arial"><b>РљР°Рє СЃРѕР·РґР°С‚СЊ СЃРІРѕР№ С‚РµСЃС‚ РЅР° РѕСЃРЅРѕРІРµ СЌР»РµРєС‚СЂРѕРЅРЅРѕРіРѕ С‚СЂРµРЅР°Р¶РµСЂР°?</b></font></p>
 <ol type="1" start="1">
-<li>Скачать пустой тренажер в разделе <a href="download.html">лист ссылок на скачку</a>
-<li>Открыть скачанный файл в программе Excel
-<li>Составить задания и вписать их в первый столбец
-<li>Вписать ответы в формулы в столбце 5
-<li>Вписать максимальное количество баллов в соответствующую строку
-<li>При необходимости, растянуть ячейки 1-6 столбцов вниз
+<li>РЎРєР°С‡Р°С‚СЊ РїСѓСЃС‚РѕР№ С‚СЂРµРЅР°Р¶РµСЂ РІ СЂР°Р·РґРµР»Рµ <a href="download.html">Р»РёСЃС‚ СЃСЃС‹Р»РѕРє РЅР° СЃРєР°С‡РєСѓ</a>
+<li>РћС‚РєСЂС‹С‚СЊ СЃРєР°С‡Р°РЅРЅС‹Р№ С„Р°Р№Р» РІ РїСЂРѕРіСЂР°РјРјРµ Excel
+<li>РЎРѕСЃС‚Р°РІРёС‚СЊ Р·Р°РґР°РЅРёСЏ Рё РІРїРёСЃР°С‚СЊ РёС… РІ РїРµСЂРІС‹Р№ СЃС‚РѕР»Р±РµС†
+<li>Р’РїРёСЃР°С‚СЊ РѕС‚РІРµС‚С‹ РІ С„РѕСЂРјСѓР»С‹ РІ СЃС‚РѕР»Р±С†Рµ 5
+<li>Р’РїРёСЃР°С‚СЊ РјР°РєСЃРёРјР°Р»СЊРЅРѕРµ РєРѕР»РёС‡РµСЃС‚РІРѕ Р±Р°Р»Р»РѕРІ РІ СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰СѓСЋ СЃС‚СЂРѕРєСѓ
+<li>РџСЂРё РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚Рё, СЂР°СЃС‚СЏРЅСѓС‚СЊ СЏС‡РµР№РєРё 1-6 СЃС‚РѕР»Р±С†РѕРІ РІРЅРёР·
 </ol>
 
-<p align=right><font face="Arial"><a href="index.html"><b>На главную</b></a></font></p>
+<p align=right><font face="Arial"><a href="index.html"><b>РќР° РіР»Р°РІРЅСѓСЋ</b></a></font></p>
 </body>
 </html>
+
 
