--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 <li>Владимир Важенов</li>
 <li>Дмитрий Агеев</li>
 <li>Дмитрий Ефремов</li>
+<li>Куратор: Кузнецова Светлана Валерьевна</li>
 </ul>
 
 <p align=right><font face="Arial"><a href="index.html"><b>На главную</b></a></font></p>
