--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <title>Авторы</title>
 <p align=center><font face="times new roman" size=+4><b><u>Электронный тренажер</b></u></font></p>
-<p align=center><font face="calibri" color=gray><i>Автооры</i></font></p>
+<p align=center><font face="calibri" color=gray><i>Авторы</i></font></p>
 <body background="back.jpg">
 <p align=left><font face="Arial"><b>Создатели проекта:</b></font></p>
 <ul>
