--- a/download.html
+++ b/download.html
@@ -7,7 +7,8 @@
 <body background="back.jpg">
 <p align=left><font face="Arial"><b>Ссылки</b></font></p>
 <ul>
-<li><a href="https://yadi.sk/d/a1PebGLN3TW7d7">Готовый электронный тренажер</a></li>
+<li><a href="https://yadi.sk/d/J1WYGU1G3TW83e">Готовый электронный тренажер</a></li>
+<li><a href="https://yadi.sk/i/pEOiHWqf3TW84j">Готовый электронный тренажер в формате Excel 97-2003</a></li>  
 <li><a href="https://yadi.sk/d/zCagEGuE3RxXY5">Пустой шаблон электронного тренажера</a></li>
 </ul>
 <p align=right><font face="Arial"><a href="index.html"><b>На главную</b></a></font></p>
