--- a/download.html
+++ b/download.html
@@ -7,8 +7,8 @@
 <body background="back.jpg">
 <p align=left><font face="Arial"><b>Ссылки</b></font></p>
 <ul>
-<li><a href="https://yadi.sk/d/jRTY3dFM3TaD3o">Электронный тренажер по теме "Квадратный корень"</a></li>
-<li><a href="https://yadi.sk/d/oYNMRBa13TaCxP">Электронный тренажер в формате Excel 97-2003 "Квадртаный корень"</a></li>  
+<li><a href="https://yadi.sk/i/RKGyfFxi3UPRFU">Электронный тренажер по теме "Квадратный корень"</a></li>
+<li><a href="https://yadi.sk/i/pXKEJCAM3UPRH2">Электронный тренажер в формате Excel 97-2003 "Квадртаный корень"</a></li>  
 <li><a href="https://yadi.sk/d/zCagEGuE3RxXY5">Пустой шаблон электронного тренажера</a></li>
 </ul>
 <p align=right><font face="Arial"><a href="index.html"><b>На главную</b></a></font></p>
