--- a/download.html
+++ b/download.html
@@ -8,7 +8,9 @@
 <p align=left><font face="Arial"><b>Ссылки</b></font></p>
 <ul>
 <li><a href="https://yadi.sk/i/XamjXvBV3VMBym">Электронный тренажер по теме "Квадратный корень"</a></li>
-<li><a href="https://yadi.sk/i/3NEZn1BP3VMBwm">Электронный тренажер в формате Excel 97-2003 "Квадртаный корень"</a></li>  
+<li><a href="https://yadi.sk/i/3NEZn1BP3VMBwm">Электронный тренажер в формате Excel 97-2003 "Квадртаный корень"</a></li>
+<li><a href="https://yadi.sk/i/YMnNQIWK3VQvzM">Электронный тренажер по Английскому языку за 8 класс</a></li>
+<li><a href="https://yadi.sk/i/iPpA3Zmi3VQwB7">Электронный тренажер по Английскому языку за 8 класс в формате Excel 97-2003</a></li>   
 <li><a href="https://yadi.sk/d/zCagEGuE3RxXY5">Пустой шаблон электронного тренажера</a></li>
 </ul>
 <p align=right><font face="Arial"><a href="index.html"><b>На главную</b></a></font></p>
